<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_help"
        android:title="@string/help_title"
        android:icon="@android:drawable/ic_menu_help"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_calibration_guide"
        android:title="@string/calibration_guide_title"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sensor_info"
        android:title="@string/sensor_info_title"
        android:icon="@android:drawable/ic_menu_info_details"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_connection_guide"
        android:title="@string/connection_guide_title"
        android:icon="@android:drawable/ic_menu_manage"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/about_title"
        android:icon="@android:drawable/ic_menu_info_details"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_license"
        android:title="@string/license_title"
        android:icon="@android:drawable/ic_menu_help"
        app:showAsAction="never" />
</menu>